--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "declaration": true,
     "module": "commonjs",
+    "moduleResolution": "node",
     "outDir": "./",
     "strict": true,
     "target": "es5"
